--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -383,7 +383,7 @@ code{
 	fill-opacity:0.9;
 }
 
-#cdvSummary, #cdvFiles, #cdvLoading{
+#cdvSummary, #cdvFiles, #cdvAiSummary, #cdvLoading{
 	position:absolute;
 	top:0;
 	bottom:0;
@@ -394,9 +394,14 @@ code{
 }
 #cdvDivider{
 	position:absolute;
-	left:50%;
 	width:6px;
 	cursor:col-resize;
+}
+#cdvDivider.left {
+	left:33%;
+}
+#cdvDivider.right {
+	left:66%;
 }
 #cdvSummary {
 	padding: 15px 20px;
@@ -405,8 +410,26 @@ code{
 	top: 0;
 	bottom: 0;
 	left: 0;
-	right: 50%;
+	width: 33%;
 	line-height: 1.6; /* Improve readability */
+}
+#cdvFiles {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 33%;
+	width: 33%;
+	overflow: auto;
+}
+#cdvAiSummary {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 66%;
+	right: 32px;
+	padding: 15px 20px;
+	overflow: auto;
+	line-height: 1.6;
 }
 #cdvSummaryTop.withAvatar {
 	padding-right: 60px;
@@ -484,13 +507,6 @@ code{
 	opacity:0.8;
 }
 
-#cdvFiles {
-	padding: 15px 20px;
-	margin-top: 15px; /* Add space above file view */
-	overflow: auto;
-	position: absolute;
-	top: 0;
-}
 #cdvFiles ul{
 	list-style-type:none;
 	-webkit-margin-before:0;
